# XZZ

./: CMakeLists.txt  XML.json  cnpkgquery.cpp  cnpkgquery.h  main.cpp  miraigui.cpp  miraigui.h  mnerinfo.h  mnerquery.cpp  mnerquery.h  pkginfo.h  pkgquery.cpp  pkgquery.h  setuinfo.h  setuquery.cpp  setuquery.h  whitelist.h  wikiquery.cpp  wikiquery.h  wikiresult.cpp  wikiresult.h
